Fix compiler warnings